--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     Ania dasz rade!
+    <div class="buttons">
+        <button id="buttons-rock">Rock</button>
+        <button id="buttons-paper">Paper</button>
+        <button id="buttons-scissors">Scissors</button>
+    </div>
+    
 <script src="main.js"></script>
 </body>
 
