--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Ania dasz rade!
-    <div class="buttons">
-        <button id="buttons-rock">Rock</button>
-        <button id="buttons-paper">Paper</button>
-        <button id="buttons-scissors">Scissors</button>
+<h1>Rock Paper Scissors</h1>
+<div class="content">
+    <div class="scores">
+        <span id="scores-comp"></span>
+        <span id="scores-player"></span>
     </div>
+    <div class="container">
+        <div class="text">
+            <div id="text-comp"></div>
+            <div id="text-player"></div>
+        </div>
+        <div class="buttons">
+            <button id="buttons-rock">Rock</button>
+            <button id="buttons-paper">Paper</button>
+            <button id="buttons-scissors">Scissors</button>
+        </div>
+    </div>
+</div>
+<footer>Copyright @ Ania Nowak</footer>
     
 <script src="main.js"></script>
 </body>
